basic html of Stoc comp

--- a/src/app/components/stock/stock.component.html
+++ b/src/app/components/stock/stock.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-
-    <h2>Stock name: {{item.getName}}</h2>
-
+    STOCK INFO CONTENT
+    <h2>Stock name: {{stock.name}}</h2>
+    <h3>Stock code: {{stock.code}}</h3>
+    <p>Price: {{stock.price}}</p>
+    <p>Previous price: {{stock.previousPrice}}</p>
+    <p>Exchange name: {{stock.exchange}}</p>
+    <p>Is favorite: {{stock.favorite? 'yes' : 'no'}}</p>
+    <hr>
 </div>
