--- a/src/app/components/stocks-list/stocks-list.component.html
+++ b/src/app/components/stocks-list/stocks-list.component.html
@@ -1,2 +1,5 @@
 <h1>Available Stocks</h1>
-<app-stock></app-stock>
+<ng-container *ngFor="let stock of stocksService.stocksList ">
+
+    <app-stock [stock]="stock"></app-stock>
+</ng-container>
