--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
     <nav>
         <div class="links">
             <a [routerLink]="['/home']">Home</a>
-            <a [routerLink]="['/about']">About</a>
+            <a [routerLink]="['/addStock']">Add Stock</a>
             <a [routerLink]="['/contacts']">Contacts</a>
         </div>
     </nav>
