--- a/src/app/components/stocks-list/stocks-list.component.html
+++ b/src/app/components/stocks-list/stocks-list.component.html
@@ -1,4 +1,4 @@
-<h1>Available Stocks</h1>
+<h1>Available Stocks to Trade</h1>
 <div class="container">
     <ng-container *ngFor="let stock of stocksService.stocksList ">
         <app-stock [stock]="stock"></app-stock>
