--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,6 @@
 body {
   background-color: #f2f2f2;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
