--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<app-header [(showForm)]="isShowForm"></app-header>
+
+<div class="main-container">
+    <app-add-stock-form class="form "
+        [hidden]="isShowForm"
+        [(showForm)]="isShowForm"></app-add-stock-form>
+    <!-- <button (click)="toggleDisplay()">uzdaryti forma</button> -->
+    <router-outlet class="main-content"></router-outlet>
+</div>
