--- a/src/app/components/add-stock-form/add-stock-form.component.html
+++ b/src/app/components/add-stock-form/add-stock-form.component.html
@@ -25,7 +25,7 @@
 
         <div class="form-group">
             <label for="stock-code">Enter stock code
-                abrevation:</label>
+                :</label>
             <input type="text"
                 required
                 name="code"
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="stock-prevPrice">Enter previous price:</label>
             <input type="number"
                 required
@@ -70,7 +70,7 @@
                 *ngIf="prevPriceInput.touched && !prevPriceInput.valid">
                 Invalid price!
             </div>
-        </div>
+        </div> -->
 
         <div class="form-group">
             <label for="stock-exchange">Enter exchange name:</label>
@@ -97,6 +97,8 @@
         </div>
 
         <button (click)="createStock(addForm)"
+            (click)="toggleDisplay()"
+            [routerLink]="['/home']"
             [disabled]="addForm.invalid">Send</button>
     </form>
 </div>
