--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,11 @@ body {
   background-color: #f2f2f2;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
