--- a/src/app/components/add-stock-form/add-stock-form.component.scss
+++ b/src/app/components/add-stock-form/add-stock-form.component.scss
@@ -32,7 +32,10 @@
         color: red;
       }
     }
-
+    .buttons {
+      display: flex;
+      gap: 20px;
+    }
     button {
       padding: 10px 20px;
       background-color: #fff;
