login/register componets html and styles

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
             <a [routerLink]="['/home']">Home</a>
             <a [routerLink]="['/contacts']">Contacts</a>
             <a (click)="toggleDisplay()">Add Stock</a>
-            <a>Login</a>
+            <a [routerLink]="['/login']">Login</a>
         </div>
     </nav>
 </header>
