--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<div class="container">
+    <h3>Enter details to login</h3>
+    <form>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email"
+                placeholder="Email">
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password"
+                placeholder="Password">
+        </div>
+        <button>Login</button>
+    </form>
+    <a [routerLink]="['/register']">Click here to Register</a>
+</div>
