--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,23 @@
-<p>register works!</p>
+<div class="container">
+    <h3>Enter details to register</h3>
+    <form>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email"
+                placeholder="Email">
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password"
+                placeholder="Password">
+        </div>
+        <div class="form-group">
+            <label for="re-password">Password:</label>
+            <input type="password"
+                placeholder="Repeat password">
+        </div>
+        <button>Register</button>
+    </form>
+
+</div>
