autorizations, edit form moved to stock info

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,10 @@
     <app-add-stock-form class="form "
         [hidden]="isShowForm"
         [(showForm)]="isShowForm"></app-add-stock-form>
-    <!-- <button (click)="toggleDisplay()">uzdaryti forma</button> -->
+
+    <!-- <edit-stock-form class="form "
+        [hidden]="isShowEditForm"
+        [(showEditForm)]="isShowEditForm"></edit-stock-form> -->
+
     <router-outlet class="main-content"></router-outlet>
 </div>
