--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,8 +8,12 @@
         <div class="links">
             <a [routerLink]="['/home']">Home</a>
             <a [routerLink]="['/contacts']">Contacts</a>
-            <a (click)="toggleDisplay()">Add Stock</a>
+            <a (click)="toggleDisplay()"
+                *ngIf="isLogged">Add Stock</a>
             <a [routerLink]="['/login']">Login</a>
+            <a (click)="clearSesion()"
+                href="/login"
+                *ngIf="isLogged">LogOut</a>
         </div>
     </nav>
 </header>
