--- a/src/app/components/stock-description/stock-description.component.html
+++ b/src/app/components/stock-description/stock-description.component.html
@@ -17,11 +17,15 @@
     <button *ngIf="!stock?.favorite"
         (click)="makeFavorite()">Make
         Favorite</button>
+
     <button *ngIf="stock?.favorite"
         (click)="makeUnFavorite()">Remove
         Favorite</button>
-    <button [routerLink]="['/market/edit',stock?.code]">Edit
+
+    <button (click)="toggleDisplay()"
+        *ngIf="isLogged">Edit
         Stock</button>
+
     <img src="../../../assets/images/btc price graph.png"
         alt="stock image">
 </div>
