--- a/src/app/components/stock-info/stock-info.component.html
+++ b/src/app/components/stock-info/stock-info.component.html
@@ -1,1 +1,10 @@
-<stock-description></stock-description>
+<div class="main-container">
+
+    <edit-stock-form class="form "
+        [hidden]="isShowForm"
+        [(showForm)]="isShowForm"></edit-stock-form>
+
+    <div class="main-content">
+        <stock-description></stock-description>
+    </div>
+</div>
