--- a/src/app/components/add-stock-form/add-stock-form.component.scss
+++ b/src/app/components/add-stock-form/add-stock-form.component.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  animation: slideIn;
+  animation-duration: 0.5s;
 
   h1 {
     margin-top: 50px;
@@ -43,6 +45,29 @@
       border: none;
       font-size: 18px;
       font-weight: 600;
+      a {
+        text-decoration: none;
+        color: #000;
+      }
     }
+  }
+}
+
+@keyframes slideIn {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 100%;
+  }
+}
+@keyframes slideOut {
+  from {
+    width: 100%;
+  }
+
+  to {
+    width: 0;
   }
 }
