--- a/src/app/components/edit-stock-form/edit-stock-form.component.scss
+++ b/src/app/components/edit-stock-form/edit-stock-form.component.scss
@@ -10,7 +10,6 @@
 
   form {
     align-items: center;
-    margin-top: 15px;
     padding: 15px;
     background-color: rgb(240, 127, 255);
     border-radius: 10px;
@@ -31,7 +30,10 @@
         color: red;
       }
     }
-
+    .buttons {
+      display: flex;
+      gap: 20px;
+    }
     button {
       padding: 10px 20px;
       background-color: #fff;
@@ -39,6 +41,10 @@
       border: none;
       font-size: 18px;
       font-weight: 600;
+      a {
+        text-decoration: none;
+        color: #000;
+      }
     }
   }
 }
