--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,17 +2,21 @@
     <h3>Enter details to login</h3>
     <form>
         <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email"
-                placeholder="Email">
+            <label for="username">Username:</label>
+            <input name="username"
+                [(ngModel)]="user.username"
+                type="text"
+                placeholder="Username">
         </div>
 
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password"
+            <input name="password"
+                [(ngModel)]="user.password"
+                type="password"
                 placeholder="Password">
         </div>
-        <button>Login</button>
+        <button (click)="login()">Login</button>
     </form>
     <a [routerLink]="['/register']">Click here to Register</a>
 </div>
