--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,23 +1,29 @@
 <div class="container">
     <h3>Enter details to register</h3>
-    <form>
+    <form #regForm="ngForm">
         <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email"
-                placeholder="Email">
+            <label for="username">Username:</label>
+            <input name="username"
+                [(ngModel)]="user.username"
+                type="text"
+                placeholder="Username">
         </div>
 
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password"
+            <input name="password"
+                [(ngModel)]="user.password"
+                type="password"
                 placeholder="Password">
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="re-password">Password:</label>
-            <input type="password"
+            <input name="re-password"
+                ngModel
+                type="password"
                 placeholder="Repeat password">
-        </div>
-        <button>Register</button>
+        </div> -->
+        <button (click)="register(regForm)">Register</button>
     </form>
 
 </div>
