--- a/src/app/components/stock-info/stock-info.component.scss
+++ b/src/app/components/stock-info/stock-info.component.scss
@@ -1,6 +1,29 @@
-:host {
+.main-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 50px;
+}
+
+.form {
+  width: 300px;
+  border-radius: 15px;
+  padding: 15px;
+  margin: 15px;
+  animation: slideIn;
+  animation-duration: 3s;
+}
+
+.main-content {
+  //   width: 100%;
+  align-self: center;
+}
+
+//Animations
+
+@keyframes slideIn {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 100%;
+  }
 }
