--- a/src/app/components/stock-info/stock-info.component.html
+++ b/src/app/components/stock-info/stock-info.component.html
@@ -5,6 +5,7 @@
         [(showForm)]="isShowForm"></edit-stock-form>
 
     <div class="main-content">
-        <stock-description></stock-description>
+        <stock-description [(showForm)]="isShowForm">
+        </stock-description>
     </div>
 </div>
