--- a/src/app/components/stock-info/stock-info.component.html
+++ b/src/app/components/stock-info/stock-info.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
 
     <edit-stock-form class="form "
-        [hidden]="isShowForm"
+        *ngIf="isShowForm"
         [(showForm)]="isShowForm"></edit-stock-form>
 
     <div class="main-content">
